--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="card mb-3">
         <img src="images/f.svg" class="card-img-top" alt="...">
         <div class="card-body">
-        <h5 class="card-title">Negroes are finding coal</h5>
+        <h5 class="card-title">Negroes are finding coal at night</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <p class="card-text"><small class="text-muted">Some useful info</small></p>
         </div>
@@ -112,7 +112,7 @@
         <div class="card mb-3">
         <img src="images/f.svg" alt="...">
         <div class="card-body">
-        <h5 class="card-title">Negroes are mining coal</h5>
+        <h5 class="card-title">Negroes are mining coal at night</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <p class="card-text"><small class="text-muted">Some useful info</small></p>
         </div>
@@ -122,7 +122,7 @@
         <div class="card mb-3">
         <img src="images/f.svg" alt="...">
         <div class="card-body">
-        <h5 class="card-title">Negroes are loading coal</h5>
+        <h5 class="card-title">Negroes are loading coal at night</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <p class="card-text"><small class="text-muted">Some useful info</small></p>
         </div>
